k8s/services/deployment-api-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-api-service:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: '100m'
            memory: '200Mi'
          limits:
            cpu: '500m'
            memory: '512Mi'
