k8s/services/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"api"},"name":"api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"api"}},"strategy":{},"template":{"metadata":{"labels":{"app":"api"}},"spec":{"containers":[{"image":"shopnoltd-api:latest","name":"shopnoltd-api","ports":[{"containerPort":8000}],"resources":{}}]}}},"status":{}}
  creationTimestamp: "2026-06-27T17:21:18Z"
  generation: 1
  labels:
    app: api
  name: api
  namespace: default
  resourceVersion: "138634"
  uid: 6904808d-a966-4a7c-8fad-e45ccdc1ac52
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-api:latest
        imagePullPolicy: Always
        name: shopnoltd-api
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-27T17:21:20Z"
    lastUpdateTime: "2026-06-27T17:21:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-27T17:21:18Z"
    lastUpdateTime: "2026-06-27T17:21:20Z"
    message: ReplicaSet "api-55f644f9b6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
