k8s/services/ee-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ee","namespace":"toolbox"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"ee"}},"template":{"metadata":{"labels":{"app":"ee"}},"spec":{"containers":[{"image":"enketo/enketo-express:latest","name":"ee"}]}}}}
  creationTimestamp: "2026-06-26T18:08:37Z"
  generation: 1
  name: ee
  namespace: toolbox
  resourceVersion: "234614"
  uid: ee5161ec-3a4f-45b7-a2a0-ba12b33982ac
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ee
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ee
    spec:
      containers:
      - image: enketo/enketo-express:latest
        imagePullPolicy: Always
        name: ee
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-26T18:08:37Z"
    lastUpdateTime: "2026-06-26T18:15:16Z"
    message: ReplicaSet "ee-ffb549647" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-06-28T11:30:49Z"
    lastUpdateTime: "2026-06-28T11:30:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
