k8s/services/kc-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"kc"},"name":"kc","namespace":"toolbox"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kc"}},"template":{"metadata":{"labels":{"app":"kc"}},"spec":{"containers":[{"env":[{"name":"DATABASE_URL","value":"postgis://kobo:kobopass@postgres.default.svc.cluster.local:5432/kobotoolbox"},{"name":"KPI_DATABASE_URL","value":"postgis://kobo:kobopass@postgres.default.svc.cluster.local:5432/kobotoolbox"},{" [...]
  creationTimestamp: "2026-07-01T08:56:26Z"
  generation: 4
  labels:
    app: kc
  name: kc
  namespace: toolbox
  resourceVersion: "540227"
  uid: f1ca0722-1156-4028-95a5-db5061e2a378
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-04T18:20:05+06:00"
      labels:
        app: kc
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgis://kobo:kobopass@postgres.default.svc.cluster.local:5432/kobotoolbox
        - name: KPI_DATABASE_URL
          value: postgis://kobo:kobopass@postgres.default.svc.cluster.local:5432/kobotoolbox
        - name: KC_DATABASE_URL
          value: postgis://kobo:kobopass@postgres.default.svc.cluster.local:5432/kobocat
        - name: MONGO_DB_URL
          value: mongodb://mongo.toolbox.svc.cluster.local:27017/kobocat
        - name: REDIS_SESSION_URL
          value: redis://redis.default.svc.cluster.local:6379/1
        - name: REDIS_CACHE_URL
          value: redis://redis.default.svc.cluster.local:6379/2
        - name: CACHE_URL
          value: redis://redis.default.svc.cluster.local:6379/2
        - name: DJANGO_SETTINGS_MODULE
          value: kobo.settings.prod
        - name: DJANGO_SECRET_KEY
          value: kobo-secret-key-change-in-production-xyz123
        - name: SERVICE_NAME
          value: kc
        - name: DJANGO_ALLOWED_HOSTS
          value: '*'
        - name: PYTHONUNBUFFERED
          value: "1"
        image: kobotoolbox/kpi:2.023.48
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: kc
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-04T08:26:02Z"
    lastUpdateTime: "2026-07-04T08:26:02Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-04T12:30:33Z"
    lastUpdateTime: "2026-07-04T12:30:33Z"
    message: ReplicaSet "kc-779cc794bf" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
