k8s/services/kc-deployment-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kc","namespace":"toolbox"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kc"}},"template":{"metadata":{"labels":{"app":"kc"}},"spec":{"containers":[{"env":[{"name":"DATABASE_URL","value":"postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb"},{"name":"KPI_DATABASE_URL","value":"postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb"},{"name":"KC_DATABASE_URL","value": [...]
  creationTimestamp: "2026-07-09T10:21:49Z"
  generation: 5
  name: kc
  namespace: toolbox
  resourceVersion: "35739"
  uid: f1754112-f972-4755-a9f5-7166cccbef95
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-09T23:01:15+06:00"
      labels:
        app: kc
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb
        - name: KPI_DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb
        - name: KC_DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kobodb
        - name: MONGO_DB_URL
          value: mongodb://mongo.toolbox.svc.cluster.local:27017/kobocat
        - name: REDIS_SESSION_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/1
        - name: REDIS_CACHE_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/2
        - name: CACHE_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/2
        - name: DJANGO_SETTINGS_MODULE
          value: kobo.settings.prod
        - name: DJANGO_SECRET_KEY
          value: y42k8K4M-Ixcc0cGE-f7uLFNMGjrpVs9FK3iQje5UkmdGkWamW9k8Wlx0eoHNaSEQd0
        - name: KPI_PREFIX
          value: /
        - name: PUBLIC_DOMAIN_NAME
          value: shopnoltd.dpdns.org
        - name: KOBOFORM_URL
          value: https://kobo.shopnoltd.dpdns.org
        - name: KOBOCAT_URL
          value: https://kf.shopnoltd.dpdns.org
        - name: SECURE_PROXY_SSL_HEADER
          value: HTTP_X_FORWARDED_PROTO, https
        - name: USE_X_FORWARDED_HOST
          value: "true"
        - name: PUBLIC_REQUEST_SCHEME
          value: https
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kpi:v1
        imagePullPolicy: Always
        name: kc
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /srv/src/kpi/media
          name: kc-media
        - mountPath: /srv/src/kobocat/media
          name: kf-media
        - mountPath: /srv/init
          name: kf-init-scripts
        - mountPath: /srv/src/kpi/docker/uwsgi.ini
          name: uwsgi-ini-override
          subPath: uwsgi.ini
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kc-media
        persistentVolumeClaim:
          claimName: kc-media-pvc
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - configMap:
          defaultMode: 493
          name: kf-init-scripts
        name: kf-init-scripts
      - configMap:
          defaultMode: 420
          name: kc-uwsgi-ini
        name: uwsgi-ini-override
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-09T13:36:54Z"
    lastUpdateTime: "2026-07-09T17:01:18Z"
    message: ReplicaSet "kc-c6cf97fc9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-07-09T17:05:07Z"
    lastUpdateTime: "2026-07-09T17:05:07Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
