k8s/services/vpn-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-service
  namespace: shopno-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vpn.shopnoltd.dpdns.org
      secretName: vpn-service-tls
  rules:
    - host: vpn.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-service
                port:
                  number: 8080
